--- a/ios/cicd.xcodeproj/xcshareddata/xcschemes/cicd.xcscheme
+++ b/ios/cicd.xcodeproj/xcshareddata/xcschemes/cicd.xcscheme
@@ -10,6 +10,22 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
+               scriptText = "buildNumber=$(/usr/libexec/PlistBuddy -c &quot;Print CFBundleVersion&quot; &quot;${PROJECT_DIR}/${INFOPLIST_FILE}&quot;)&#10;newBuildNumber=$(($buildNumber + 1))&#10;$(/usr/libexec/PlistBuddy -c &quot;Set :CFBundleVersion $newBuildNumber&quot; &quot;${PROJECT_DIR}/${INFOPLIST_FILE}&quot;)&#10;&#10;VERSIONNUM=$(/usr/libexec/PlistBuddy -c &quot;Print CFBundleShortVersionString&quot; &quot;${PROJECT_DIR}/${INFOPLIST_FILE}&quot;)&#10;NEWSUBVERSION=`echo $VERSIONNUM | awk -F &quot;.&quot; &apos;{print $3}&apos;`&#10;NEWSUBVERSION=$(($NEWSUBVERSION + 1))&#10;NEWVERSIONSTRING=`echo $VERSIONNUM | awk -F &quot;.&quot; &apos;{print $1 &quot;.&quot; $2 &quot;.&apos;$NEWSUBVERSION&apos;&quot; }&apos;`&#10;$(/usr/libexec/PlistBuddy -c &quot;Set :CFBundleShortVersionString $NEWVERSIONSTRING&quot; &quot;${PROJECT_DIR}/${INFOPLIST_FILE}&quot;)&#10;&#10;echo &quot;buildNumber: ${buildNumber} - newBuildNumber: ${newBuildNumber}&quot;&#10;echo &quot;VERSIONNUM: ${VERSIONNUM} - NEWVERSIONSTRING: ${NEWVERSIONSTRING}&quot;&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+                     BuildableName = "cicd.app"
+                     BlueprintName = "cicd"
+                     ReferencedContainer = "container:cicd.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
                scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;touch &quot;${PROJECT_DIR}/../node_modules/react-native-config/ios/ReactNativeConfig/BuildDotenvConfig.rb&quot;&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
