--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,9 +28,18 @@ workflows:
         script: xcode-project use-profiles
       - name: Build ipa for distribution
         script: |
-          xcode-project build-ipa \
-            --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
-            --scheme "$XCODE_SCHEME" --archive-flags="-destination 'generic/platform=iOS'"
+          # xcode-project build-ipa \
+          #   --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
+          #   --scheme "$XCODE_SCHEME" --archive-flags="-destination 'generic/platform=iOS'"
+          xcodebuild build \
+            -workspace "$XCODE_WORKSPACE" \
+            -scheme "$XCODE_SCHEME" \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.7' \
+            -configuration Release \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
