--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -61,7 +61,9 @@ workflows:
           echo "VERSIONNUM: ${VERSIONNUM} - NEWVERSIONSTRING: ${NEWVERSIONSTRING}"
       - name: Push commit
         script: |
-          git remote set-url https://PttB422:$GIT_PW@github.com/PttB422/cicd.git
+          echo $GIT_PW
+          echo https://PttB422:$GIT_PW@github.com/PttB422/cicd.git
+          git remote set-url origin https://PttB422:$GIT_PW@github.com/PttB422/cicd.git
           git checkout $APP_ENV
           git add .
           git commit -am "build and bump version"
