--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -70,3 +70,53 @@ workflows:
       - /tmp/xcodebuild_logs/*.log
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+  react-native-android:
+    name: React Native Android
+    max_build_duration: 120
+    instance_type: mac_mini_m1
+    environment:
+      groups:
+        - uat
+      vars:
+        PACKAGE_NAME: com.cicd
+      node: v16.11.1
+    scripts:
+      - name: Install npm dependencies
+        script: |
+          npm install
+      - name: Set Android SDK location
+        script: |
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > "$FCI_BUILD_DIR/android/local.properties"
+      # - name: Set up keystore
+      #   script: |
+      #         echo $CM_KEYSTORE | base64 --decode > /tmp/keystore.keystore
+      #         # The following script creates key.properties file and stores the credentials in it. As we configure code signing in app/build.gradle file, the following part is unnecessary unless code signing is configured differently as explained in the documentation: https://docs.codemagic.io/flutter-code-signing/android-code-signing/
+      #         # cat >> "$CM_BUILD_DIR/android/key.properties" <<EOF
+      #         # storePassword=$CM_KEYSTORE_PASSWORD
+      #         # keyPassword=$CM_KEY_ALIAS_PASSWORD
+      #         # keyAlias=$CM_KEY_ALIAS_USERNAME
+      #         # storeFile=/tmp/keystore.keystore
+      #         # EOF
+      - name: Bump version
+        script: |
+
+          # get gradle property
+          cd android
+          versionCode=$(./gradlew -q printVersionCode | tail -1)
+          versionName=$(./gradlew -q printVersionName | tail -1)
+
+          nextVersionName=$(echo ${versionName} | awk -F. -v OFS=. '{$NF += 1 ; print}')
+          nextVersionCode=$((versionCode+1))
+
+          echo "versionCode: ${versionCode} - nextVersionCode: ${nextVersionCode}"
+          echo "versionName: ${versionName} - nextVersionName: ${nextVersionName}"
+      - name: Build Android release
+        script: |
+          # Set environment variable so it can be used to increment build number in android/app/build.gradle
+          # Note that tracks can be specified when retrieving latest build number from Google Play, for example:
+          # export NEW_BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks=alpha) + 1))
+          # export LATEST_GOOGLE_PLAY_BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME") + 1))
+          cd android && ./gradlew assembleRelease
+    artifacts:
+      - android/app/build/outputs/**/*.aab
+      - android/app/build/outputs/**/*.apk
