--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -63,7 +63,6 @@ workflows:
         script: |
           git remote set-url origin https://PttB422:$GIT_PW@github.com/PttB422/cicd.git
           git add .
-          git checkout $APP_ENV
           git commit -am "build and bump version"
           git push origin $APP_ENV
     artifacts:
@@ -131,8 +130,7 @@ workflows:
           cd android && ./gradlew assembleRelease
       - name: Push commit
         script: |
-          # git remote set-url origin https://PttB422:$GIT_PW@github.com/PttB422/cicd.git
-          git checkout $APP_ENV
+          git remote set-url origin https://PttB422:$GIT_PW@github.com/PttB422/cicd.git
           git add .
           git commit -am "build and bump version"
           git push origin $APP_ENV
